fix: single-pass RAG retrieval and AI observations
Remove the duplicate retrieveContext call before RetrievalAugmentationAdvisor
so each question searches once, while topK/docIds flow through Query context.
Drop unused ObservabilityConfig beans and pin Spring AI observation defaults
that keep prompts/completions out of logs; keep AiInvocationRecorder for product metrics.

References:
- [Retrieval Augmented Generation](https://docs.spring.io/spring-ai/reference/api/retrieval-augmented-generation.html)
- [Observability](https://docs.spring.io/spring-ai/reference/observability/index.html)
- [Upgrade Notes 2.0](https://docs.spring.io/spring-ai/reference/upgrade-notes.html)

Co-authored-by: Cursor <cursoragent@cursor.com>