@@ -4,40 +4,42 @@ import com.ai.chat.domain.service.LanguageDetectionService;
 import com.ai.common.application.llm.ChatClientProfile;
 import com.ai.common.application.llm.ChatClientProvider;
 import com.ai.common.application.llm.TextChatOptions;
-import com.ai.rag.application.dto.RagChatResult;
-import com.ai.rag.domain.model.SourceDocument;
-import com.ai.rag.domain.vo.DocumentId;
 import com.ai.metrics.application.AiInvocationRecorder;
+import com.ai.rag.application.dto.RagChatResult;
 import com.ai.rag.infrastructure.retrieval.H2DocumentRetriever;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.client.ChatClientResponse;
 import org.springframework.ai.chat.client.advisor.api.Advisor;
+import org.springframework.ai.chat.messages.AssistantMessage;
+import org.springframework.ai.chat.model.ChatResponse;
+import org.springframework.ai.chat.model.Generation;
+import org.springframework.ai.document.Document;
+import org.springframework.ai.rag.advisor.RetrievalAugmentationAdvisor;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.function.Consumer;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("RagChatUseCase")
 class RagChatUseCaseTest {
-
-    @Mock
-    private RagApplicationService ragApplicationService;
 
     @Mock
     private ChatClientProvider chatClientProvider;
@@ -65,7 +67,6 @@ class RagChatUseCaseTest {
     @BeforeEach
     void setUp() {
         ragChatUseCase = new RagChatUseCase(
-                ragApplicationService,
                 chatClientProvider,
                 languageDetectionService,
                 documentRetriever,
@@ -75,6 +76,7 @@ class RagChatUseCaseTest {
                 .thenReturn(chatClient);
         when(chatClient.prompt()).thenReturn(requestSpec);
         when(requestSpec.advisors(any(Advisor.class))).thenReturn(requestSpec);
+        when(requestSpec.advisors(any(Consumer.class))).thenReturn(requestSpec);
         when(requestSpec.system(anyString())).thenReturn(requestSpec);
         when(requestSpec.user(anyString())).thenReturn(requestSpec);
         when(requestSpec.call()).thenReturn(callResponseSpec);
@@ -90,14 +92,8 @@ class RagChatUseCaseTest {
         void should_returnChatResultWithResponseAndSources_when_questionProvided() {
             String question = "What is AI?";
             String aiResponse = "AI is Artificial Intelligence";
-            List<SourceDocument> sources = List.of(
-                    new SourceDocument("AI definition", 0.95, Map.of())
-            );
-            RagApplicationService.RetrievalResult retrievalResult =
-                    new RagApplicationService.RetrievalResult("context", sources, question);
-
-            when(ragApplicationService.retrieveContext(eq(question), isNull(), eq(5))).thenReturn(retrievalResult);
-            when(callResponseSpec.content()).thenReturn(aiResponse);
+            Document sourceDoc = new Document("AI definition", Map.of("score", 0.95));
+            stubChatClientResponse(aiResponse, List.of(sourceDoc));
 
             RagChatResult result = ragChatUseCase.chat(question, null, null);
 
@@ -105,28 +101,30 @@ class RagChatUseCaseTest {
             assertThat(result.response()).isEqualTo(aiResponse);
             assertThat(result.sources()).hasSize(1);
             assertThat(result.sources().getFirst().text()).isEqualTo("AI definition");
-
-            verify(ragApplicationService).retrieveContext(question, null, 5);
+            assertThat(result.sources().getFirst().score()).isEqualTo(0.95);
             verify(requestSpec).user(question);
         }
 
         @Test
-        @DisplayName("should_passDocIdsToService_when_provided")
-        void should_passDocIdsToService_when_provided() {
+        @DisplayName("should_passDocIdsViaAdvisorParams_when_provided")
+        void should_passDocIdsViaAdvisorParams_when_provided() {
             String question = "What is AI?";
             String docId1 = UUID.randomUUID().toString();
             List<String> docIds = List.of(docId1);
-            List<DocumentId> expectedDocIds = List.of(DocumentId.of(docId1));
-
-            RagApplicationService.RetrievalResult retrievalResult =
-                    new RagApplicationService.RetrievalResult("context", Collections.emptyList(), question);
-
-            when(ragApplicationService.retrieveContext(question, expectedDocIds, 5)).thenReturn(retrievalResult);
-            when(callResponseSpec.content()).thenReturn("response");
+            stubChatClientResponse("response", List.of());
 
             ragChatUseCase.chat(question, docIds, null);
 
-            verify(ragApplicationService).retrieveContext(question, expectedDocIds, 5);
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<Consumer<ChatClient.AdvisorSpec>> advisorCaptor =
+                    ArgumentCaptor.forClass(Consumer.class);
+            verify(requestSpec, atLeastOnce()).advisors(advisorCaptor.capture());
+
+            CapturingAdvisorSpec capturing = new CapturingAdvisorSpec();
+            advisorCaptor.getAllValues().forEach(consumer -> consumer.accept(capturing));
+            assertThat(capturing.params)
+                    .containsEntry(H2DocumentRetriever.TOP_K_CONTEXT_KEY, 5)
+                    .containsEntry(H2DocumentRetriever.DOC_IDS_CONTEXT_KEY, docIds);
         }
 
         @Test
@@ -134,33 +132,37 @@ class RagChatUseCaseTest {
         void should_useCustomTopK_when_provided() {
             String question = "What is AI?";
             int customTopK = 10;
-
-            RagApplicationService.RetrievalResult retrievalResult =
-                    new RagApplicationService.RetrievalResult("context", Collections.emptyList(), question);
-
-            when(ragApplicationService.retrieveContext(question, null, customTopK)).thenReturn(retrievalResult);
-            when(callResponseSpec.content()).thenReturn("response");
+            stubChatClientResponse("response", List.of());
 
             ragChatUseCase.chat(question, null, customTopK);
 
-            verify(ragApplicationService).retrieveContext(question, null, customTopK);
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<Consumer<ChatClient.AdvisorSpec>> advisorCaptor =
+                    ArgumentCaptor.forClass(Consumer.class);
+            verify(requestSpec, atLeastOnce()).advisors(advisorCaptor.capture());
+
+            CapturingAdvisorSpec capturing = new CapturingAdvisorSpec();
+            advisorCaptor.getAllValues().forEach(consumer -> consumer.accept(capturing));
+            assertThat(capturing.params).containsEntry(H2DocumentRetriever.TOP_K_CONTEXT_KEY, customTopK);
+            assertThat(capturing.params).doesNotContainKey(H2DocumentRetriever.DOC_IDS_CONTEXT_KEY);
         }
 
         @Test
         @DisplayName("should_useDefaultTopK_when_topKIsNull")
         void should_useDefaultTopK_when_topKIsNull() {
             String question = "What is AI?";
-            int expectedDefaultTopK = 5;
-
-            RagApplicationService.RetrievalResult retrievalResult =
-                    new RagApplicationService.RetrievalResult("context", Collections.emptyList(), question);
-
-            when(ragApplicationService.retrieveContext(question, null, expectedDefaultTopK)).thenReturn(retrievalResult);
-            when(callResponseSpec.content()).thenReturn("response");
+            stubChatClientResponse("response", List.of());
 
             ragChatUseCase.chat(question, null, null);
 
-            verify(ragApplicationService).retrieveContext(question, null, expectedDefaultTopK);
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<Consumer<ChatClient.AdvisorSpec>> advisorCaptor =
+                    ArgumentCaptor.forClass(Consumer.class);
+            verify(requestSpec, atLeastOnce()).advisors(advisorCaptor.capture());
+
+            CapturingAdvisorSpec capturing = new CapturingAdvisorSpec();
+            advisorCaptor.getAllValues().forEach(consumer -> consumer.accept(capturing));
+            assertThat(capturing.params).containsEntry(H2DocumentRetriever.TOP_K_CONTEXT_KEY, 5);
         }
 
         @Test
@@ -168,16 +170,55 @@ class RagChatUseCaseTest {
         void should_handleEmptyDocIdsList_when_empty() {
             String question = "What is AI?";
             List<String> emptyDocIds = Collections.emptyList();
-
-            RagApplicationService.RetrievalResult retrievalResult =
-                    new RagApplicationService.RetrievalResult("context", Collections.emptyList(), question);
-
-            when(ragApplicationService.retrieveContext(question, null, 5)).thenReturn(retrievalResult);
-            when(callResponseSpec.content()).thenReturn("response");
+            stubChatClientResponse("response", List.of());
 
             ragChatUseCase.chat(question, emptyDocIds, null);
 
-            verify(ragApplicationService).retrieveContext(question, null, 5);
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<Consumer<ChatClient.AdvisorSpec>> advisorCaptor =
+                    ArgumentCaptor.forClass(Consumer.class);
+            verify(requestSpec, atLeastOnce()).advisors(advisorCaptor.capture());
+
+            CapturingAdvisorSpec capturing = new CapturingAdvisorSpec();
+            advisorCaptor.getAllValues().forEach(consumer -> consumer.accept(capturing));
+            assertThat(capturing.params).doesNotContainKey(H2DocumentRetriever.DOC_IDS_CONTEXT_KEY);
+        }
+    }
+
+    private void stubChatClientResponse(String content, List<Document> documents) {
+        ChatResponse chatResponse = ChatResponse.builder()
+                .generations(List.of(new Generation(new AssistantMessage(content))))
+                .build();
+        ChatClientResponse clientResponse = ChatClientResponse.builder()
+                .chatResponse(chatResponse)
+                .context(Map.of(RetrievalAugmentationAdvisor.DOCUMENT_CONTEXT, documents))
+                .build();
+        when(callResponseSpec.chatClientResponse()).thenReturn(clientResponse);
+    }
+
+    private static final class CapturingAdvisorSpec implements ChatClient.AdvisorSpec {
+        private final Map<String, Object> params = new java.util.HashMap<>();
+
+        @Override
+        public ChatClient.AdvisorSpec param(String key, Object value) {
+            params.put(key, value);
+            return this;
+        }
+
+        @Override
+        public ChatClient.AdvisorSpec params(Map<String, Object> p) {
+            params.putAll(p);
+            return this;
+        }
+
+        @Override
+        public ChatClient.AdvisorSpec advisors(Advisor... advisors) {
+            return this;
+        }
+
+        @Override
+        public ChatClient.AdvisorSpec advisors(List<Advisor> advisors) {
+            return this;
         }
     }
 }
